# RAG-web-search

./: .gitignore  README.md  gen.py  main.py  pyproject.toml
src/: main.py
static/: index.html  script.js  styles.css
